--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,6 +4,8 @@
 //placeholders
 @import "helpers/placeholders";
 
+@import "helpers/animation-placeholders";
+
 
 
 //reset
@@ -16,22 +18,6 @@
 @import  "base/elements";
 
 
-/*ANIMATION CLASSES*/
-
-.pulse {
-   animation-name: pulse;
-   animation-duration: 1.5s;
-}
-
-.downer {
-   animation-name: downer;
-   animation-duration: 2s;
-}
-
-.liftmeup {
-   animation-name: liftmeup;
-   animation-duration: 2s;
-}
 
 /*##### HEADER #####*/
 
