meetme button quick fix :P
still to fix

--- a/sass/partials/_intro.scss
+++ b/sass/partials/_intro.scss
@@ -121,10 +121,11 @@
          }
 
       }
+
       .boxmeetme {
          a {
-            position: absolute;
-            top: 18%;
+            position: relative;
+            bottom: 22%;
             color: #ffffff;
             @extend %shadow;
             transition: transform 1.5s;
