--- a/css/styles0.css
+++ b/css/styles0.css
@@ -10,14 +10,11 @@ h5, a, .mainbutton, nav #mini-nav .menu-hamburger, nav .main-nav-container .main
 .flex-container, nav .main-nav-container .main-nav li a, .intro-container .intro, .intro-container .intro .boxglasses .glasses-content {
   position: relative;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-  -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
@@ -55,20 +52,16 @@ nav .main-nav-container .main-nav li:hover, .intro-container .intro .boxjob:hove
 .box, .back-box, .skill-details .skill-close-box, .intro-container .intro .hellobox, .about-details .about-details-wrapper, .contact-container {
   height: 100%;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
   -webkit-box-pack: center;
-  -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
   -webkit-box-align: center;
-  -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
 }
@@ -284,21 +277,17 @@ nav {
 nav #mini-nav {
   width: 100%;
   -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 nav #mini-nav .menu, nav #mini-nav .logo {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-flex-wrap: nowrap;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
   margin: 1%;
@@ -317,11 +306,9 @@ nav #mini-nav .menu-hamburger {
 nav .main-nav-container .main-nav {
   height: 100vh;
   display: none;
-  -webkit-justify-content: space-around;
   -ms-flex-pack: distribute;
   justify-content: space-around;
   -webkit-box-align: stretch;
-  -webkit-align-items: stretch;
   -ms-flex-align: stretch;
   align-items: stretch;
   list-style-type: none;
@@ -380,7 +367,6 @@ nav .main-nav-container .main-nav li a {
   color: #1C1B20;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
   text-align: center;
@@ -454,7 +440,6 @@ nav .main-nav-container .main-nav li a {
   right: 0;
   left: 0;
   -webkit-box-align: center;
-  -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
 }
@@ -519,14 +504,9 @@ nav .main-nav-container .main-nav li a {
 }
 
 .intro-container .intro .boxmeetme a {
-  position: relative;
-  bottom: 22%;
+  position: absolute;
+  top: 18%;
   color: #ffffff;
-  -webkit-transition: -webkit-transform 1.5s;
-  transition: -webkit-transform 1.5s;
-  -o-transition: transform 1.5s;
-  transition: transform 1.5s;
-  transition: transform 1.5s, -webkit-transform 1.5s;
 }
 
 .intro-container .tolovemove {
@@ -545,10 +525,8 @@ nav .main-nav-container .main-nav li a {
 
 .about .bigbox {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
@@ -723,7 +701,6 @@ nav .main-nav-container .main-nav li a {
 }
 
 .skills .flex-container {
-  -webkit-justify-content: space-around;
   -ms-flex-pack: distribute;
   justify-content: space-around;
 }
@@ -849,7 +826,6 @@ svg .skill-header {
 .skill-details .skill-list {
   z-index: 50;
   -webkit-box-align: start;
-  -webkit-align-items: flex-start;
   -ms-flex-align: start;
   align-items: flex-start;
   -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
@@ -1017,12 +993,10 @@ footer .container .flex-container {
   width: 90%;
   height: 100%;
   -webkit-box-align: center;
-  -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
 }
@@ -1058,7 +1032,6 @@ footer .container .flex-container {
 .cookie-banner .cookie-banner-inner {
   margin: 2%;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   background-color: #ffc857;
@@ -1294,7 +1267,6 @@ footer .container .flex-container {
   nav .main-nav-container .main-nav {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
     background-color: #ffffff;
@@ -1318,16 +1290,13 @@ footer .container .flex-container {
   }
   .intro-container .intro {
     display: -webkit-box;
-    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
     -webkit-box-align: center;
-    -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
     margin-top: 12vw;
@@ -1342,15 +1311,12 @@ footer .container .flex-container {
   }
   .intro-container .intro .rightside {
     display: -webkit-box;
-    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     width: 60vw;
-    -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
   }
@@ -1398,14 +1364,12 @@ footer .container .flex-container {
   }
   .phonenumber-small {
     display: -webkit-box;
-    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     position: absolute;
   }
   .email-small {
     display: -webkit-box;
-    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     position: absolute;
@@ -1523,20 +1487,17 @@ footer .container .flex-container {
   .cookie-banner .cookie-banner-inner {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
   }
   .cookie-banner .cookie-banner-inner i {
     -webkit-box-ordinal-group: 2;
-    -webkit-order: 1;
     -ms-flex-order: 1;
     order: 1;
     font-size: 10vw;
   }
   .cookie-banner .cookie-banner-inner p {
     -webkit-box-ordinal-group: 3;
-    -webkit-order: 2;
     -ms-flex-order: 2;
     order: 2;
     margin-top: 0;
