--- a/sass/partials/_skills.scss
+++ b/sass/partials/_skills.scss
@@ -100,7 +100,7 @@ svg .alpha {
 svg .skill-header {
     font-size: 5vw;
     @extend %elements-font;
-
+    font-weight: 800
 }
 
 #skill1 svg .color-rect {
