--- a/sass/base/_basics.scss
+++ b/sass/base/_basics.scss
@@ -1,8 +1,9 @@
 body {
    background: #ffffff;
-   background-image: radial-gradient(#e6e6e6 20%, transparent 0), radial-gradient(#e6e6e6 20%, transparent 0);
-   background-size: 150px 150px;
-   background-position: 0 0, 75px 75px;
+   /*background-image: radial-gradient(#e6e6e6 20%, transparent 0), radial-gradient(#e6e6e6 20%, transparent 0);*/
+   background-image: url("../img/grid-background.png");
+  /* background-size: 150px 150px;
+   background-position: 0 0, 75px 75px;*/
    background-attachment: fixed;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
@@ -15,7 +16,7 @@ body {
 ol,
 p,
 ul {
-   font-family: 'Source Code Pro', monospace;
+   font-family: 'Cousine', monospace;
    color: #000000;
    line-height: 1.3em;
    margin-top: 1em;
@@ -23,7 +24,8 @@ ul {
 }
 
 p {
-   font-size: 16px;
+   font-size: 14px;
+   line-height: 1.8em;
 }
 
 h1,
@@ -79,6 +81,7 @@ section {
    padding-top: 5vw;
    margin-top: 10%;
    margin-bottom: 10%;
+
 }
 
 .flex-container {
@@ -92,6 +95,7 @@ section .container {
    width: 100%;
    background-color: #ffffff;
    padding-bottom: 10%;
+    border-top:5px solid #e6e6e6;
 }
 
 section .flex-container {
@@ -106,13 +110,35 @@ section .flex-container {
 
 .section-header h2 {
    text-align: center;
-   font-weight: 900;
    margin-bottom: -2.5vw;
+   line-height: 1.3em;
 }
 
 .section-intro {
-   width: 80%;
+   width: 75%;
    margin: 0 auto;
    text-align: justify;
    padding-top: 5%;
+
+}
+
+.highlight-it {
+  border:1px solid black;
+  padding:2px;
+}
+
+.red-text {
+  color:$red
+}
+
+.mustard-text {
+  color:$mustard
+}
+
+.violet-text {
+  color:$violet
+}
+
+.blue-text {
+  color:$blue;
 }
