--- a/sass/partials/_intro.scss
+++ b/sass/partials/_intro.scss
@@ -80,11 +80,18 @@
       }
 
       .boxjob {
+
          background-color: #f8f8f8;
          transition: box-shadow 0.3s;
          cursor: pointer;
          @extend %shadow;
          @extend %striped-cover;
+      }
+
+      .boxjob h2 {
+        font-weight: 500;
+        font-family: 'Cousine', monospace;
+
       }
 
       .boxheart {
