--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -17,14 +17,14 @@ nav {
       }
 
       .logo a {
-         font-family: 'Fascinate', cursive;
-         font-size: 2.5vw;
+         font-family: 'Cousine', monospace;
+         font-size: 1.5vw;
          text-decoration: none;
       }
 
       .menu-hamburger {
          @extend %elements-font;
-         font-size: 2vw;
+         font-size: 1.5vw;
 
       }
    }
@@ -53,8 +53,7 @@ nav {
             &:nth-child(3) {background-color: $red;}
             &:nth-child(4) {background-color: $violet;}
             &:last-child {width:10%;}
-            &:hover {width:30%}
-            &:hover a {text-transform:uppercase; font-size:4vw;}
+            &:hover a {text-transform:uppercase; font-size:2vw;}
             &:hover a i {text-transform:uppercase; font-size:12vw;}
 
             a {
