skills - bacground repeat

--- a/css/styles.css
+++ b/css/styles.css
@@ -609,13 +609,16 @@ nav {
   background-repeat: repeat; }
 
 #skill2 .skill-bg {
-  background-image: url("../img/design.png"); }
+  background-image: url("../img/design.png");
+  background-repeat: repeat; }
 
 #skill3 .skill-bg {
-  background-image: url("../img/digital.png"); }
+  background-image: url("../img/digital.png");
+  background-repeat: repeat; }
 
 #skill4 .skill-bg {
-  background-image: url("../img/text.png"); }
+  background-image: url("../img/text.png");
+  background-repeat: repeat; }
 
 svg {
   width: 200%;
