--- a/sass/partials/_skills.scss
+++ b/sass/partials/_skills.scss
@@ -74,14 +74,17 @@
 
 #skill2 .skill-bg {
     background-image: url("../img/design.png");
+        background-repeat: repeat;
 }
 
 #skill3 .skill-bg {
     background-image: url("../img/digital.png");
+        background-repeat: repeat;
 }
 
 #skill4 .skill-bg {
     background-image: url("../img/text.png");
+        background-repeat: repeat;
 }
 
 
