--- a/css/styles.css
+++ b/css/styles.css
@@ -174,7 +174,7 @@ section .container {
   border-top: 5px solid #e6e6e6; }
 
 section .flex-container {
-  padding-top: 7%; }
+  padding-top: 1%; }
 
 .section-header {
   width: 80%;
@@ -188,8 +188,16 @@ section .flex-container {
 .section-intro {
   width: 75%;
   margin: 0 auto;
+  padding: 5%; }
+
+.section-intro p {
   text-align: justify;
-  padding-top: 5%; }
+  line-height: 2em; }
+
+@media only screen and (max-width: 480px) {
+  .section-intro p {
+    text-align: left;
+    margin: 0 15px; } }
 
 .highlight-it {
   border: 1px solid black;
