--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,8 @@ section .flex-container {
 @media only screen and (max-width: 480px) {
   .section-intro p {
     text-align: left;
-    margin: 0 15px; } }
+    margin: 15px;
+    line-height: 2.1em; } }
 
 .highlight-it {
   border: 1px solid black;
