--- a/css/styles.css
+++ b/css/styles.css
@@ -274,10 +274,10 @@ nav {
       margin: 1%; }
     nav #mini-nav .logo a {
       font-family: 'Cousine', monospace;
-      font-size: 1.5vw;
+      font-size: 16px;
       text-decoration: none; }
     nav #mini-nav .menu-hamburger {
-      font-size: 1.5vw; }
+      font-size: 16px; }
   nav .main-nav-container .main-nav {
     height: 100vh;
     display: none;
