--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -18,13 +18,13 @@ nav {
 
       .logo a {
          font-family: 'Cousine', monospace;
-         font-size: 1.5vw;
+         font-size: 16px;
          text-decoration: none;
       }
 
       .menu-hamburger {
          @extend %elements-font;
-         font-size: 1.5vw;
+         font-size: 16px;
 
       }
    }
@@ -60,7 +60,7 @@ nav {
                width: 100%;
                height: 100%;
                text-decoration: none;
-               font-size: 2vw;
+               font-size:2vw;
                color: $dgrey;
                @extend %elements-font;
                @extend %flex-center; //rel?
