--- a/sass/partials/_skills.scss
+++ b/sass/partials/_skills.scss
@@ -15,8 +15,15 @@
     animation-timing-function: linear;
 }
 
+@media only screen and (max-width: 480px) {
+  .skills .section-intro p{
+      margin: 15px;
+      line-height:2.1em;
+  }
+}
 
 /*---separate skills---*/
+
 
 .skills {
    .container {
